--- a/BoxManager/BoxManager.csproj
+++ b/BoxManager/BoxManager.csproj
@@ -65,11 +65,11 @@
     <Compile Include="Interfaces\Boxeadores.Designer.cs">
       <DependentUpon>Boxeadores.cs</DependentUpon>
     </Compile>
-    <Compile Include="Interfaces\DivsionesCategorias.cs">
+    <Compile Include="Interfaces\DivisionesCategorias.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Interfaces\DivsionesCategorias.Designer.cs">
-      <DependentUpon>DivsionesCategorias.cs</DependentUpon>
+    <Compile Include="Interfaces\DivisionesCategorias.Designer.cs">
+      <DependentUpon>DivisionesCategorias.cs</DependentUpon>
     </Compile>
     <Compile Include="Interfaces\Menu.cs">
       <SubType>Form</SubType>
@@ -88,8 +88,8 @@
     <EmbeddedResource Include="Interfaces\Boxeadores.resx">
       <DependentUpon>Boxeadores.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Interfaces\DivsionesCategorias.resx">
-      <DependentUpon>DivsionesCategorias.cs</DependentUpon>
+    <EmbeddedResource Include="Interfaces\DivisionesCategorias.resx">
+      <DependentUpon>DivisionesCategorias.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Interfaces\Menu.resx">
       <DependentUpon>Menu.cs</DependentUpon>
