--- a/BoxManager/BoxManager.csproj
+++ b/BoxManager/BoxManager.csproj
@@ -33,9 +33,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.ReportViewer.Common, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+    <Reference Include="Microsoft.ReportViewer.WinForms, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -79,6 +82,21 @@
     </Compile>
     <Compile Include="Classes\Iniciar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reportes\BoxeadoresDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BoxeadoresDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Reportes\BoxeadoresReport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reportes\BoxeadoresReport.Designer.cs">
+      <DependentUpon>BoxeadoresReport.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Reportes\BoxeadoresReport.resx">
+      <DependentUpon>BoxeadoresReport.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\ReportBox.rdlc" />
     <None Include="Classes\BoxDB.dbml.layout">
       <DependentUpon>BoxDB.dbml</DependentUpon>
     </None>
@@ -118,6 +136,17 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Reportes\BoxeadoresDataSet.xsc">
+      <DependentUpon>BoxeadoresDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="Reportes\BoxeadoresDataSet.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>BoxeadoresDataSet.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="Reportes\BoxeadoresDataSet.xss">
+      <DependentUpon>BoxeadoresDataSet.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -125,7 +154,9 @@
   <ItemGroup>
     <None Include="Recursos\BoxMenu.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Recursos\Logo.png" />
+  </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
