--- a/BoxManager/BoxManager.csproj
+++ b/BoxManager/BoxManager.csproj
@@ -121,6 +121,12 @@
       <DependentUpon>Menu.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\Iniciar.cs" />
+    <Compile Include="Interfaces\Torneo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Interfaces\Torneo.Designer.cs">
+      <DependentUpon>Torneo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reportes\BoxeadoresDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -139,6 +145,9 @@
       <DependentUpon>GraficaDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="SqlServerTypes\Loader.cs" />
+    <EmbeddedResource Include="Interfaces\Torneo.resx">
+      <DependentUpon>Torneo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Reportes\BoxeadoresReport.resx">
       <DependentUpon>BoxeadoresReport.cs</DependentUpon>
     </EmbeddedResource>
