Ultimos cambios realizados antes de presentarse con el cliente

--- a/BoxManager/App.config
+++ b/BoxManager/App.config
@@ -3,7 +3,9 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="BoxManager.Properties.Settings.BoxManagerDBConnectionString" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=BoxManagerDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+        <add name="BoxManager.Properties.Settings.BoxManagerDBConnectionString"
+            connectionString="Data Source=(localdb)\v11.0;AttachDbFilename=C:\BoxManagerDB.mdf;Initial Catalog=BoxManagerDB;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
